Bug squashing

--- a/all.css
+++ b/all.css
@@ -24,7 +24,7 @@ h2 {
 
 h3 {
     font-size: 32px;
-    height: fit-content;
+    height: fit-content !important;
 }
 
 h4 {
@@ -43,23 +43,27 @@ p {
 
 @media screen and (max-width: 1050px) {
     h1 {
-        font-size: 128px;
+        font-size: 40px !important;
     }
 
     h2 {
-        font-size: 64px;
+        font-size: 20px !important;
     }
 
     h3 {
-        font-size: 64px;
+        font-size: 50px !important;
     }
 
     h4 {
-        font-size: 48px;
+        font-size: 30px !important;
+    }
+
+    a {
+        font-size: 20px;
     }
 
     p {
-        font-size: 40px;
+        font-size: 30px;
     }
 
 }
